Disabled dark mode, so only white and fixed favicon and title

--- a/frontend/websock/gochat-front/src/pages/style.css
+++ b/frontend/websock/gochat-front/src/pages/style.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
-@plugin "daisyui";
+ @plugin "daisyui" {
+   themes: light --default;
+ }
 
 .bg-white-gray-gradient {
     min-height: 100vh;
